--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Async context manager for nesting async context stacks"
 authors = ["Chris Lee <chris@cosmosnexus.co>"]
 
 [[tool.poetry.packages]]
-include = "actxstack"
+include = "asynccontextstack"
 
 [tool.poetry.dependencies]
 python = "^3.8"
